--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
         "babel-loader": "^7.1.4",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
+        "directory-tree": "^2.0.0",
         "highlight": "^0.2.4",
-        "html-loader": "^0.5.5",
         "install": "^0.10.4",
-        "markdown-loader": "^2.0.2",
+        "loader-utils": "^1.1.0",
         "marked": "^0.3.17",
         "npm": "^5.7.1",
         "react-hot-loader": "^4.0.0",
+        "schema-utils": "^0.4.5",
         "webpack": "^4.1.1",
         "webpack-cli": "^2.0.12",
         "webpack-dev-server": "^3.1.1"
