--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "keywords": [],
     "scripts": {
-        "start": "webpack-dev-server --open --config ./webpack.config.js --mode development",
+        "start": "webpack-dev-server --open --config ./config/webpack.config.js --mode development",
         "clean": "rimraf dist",
         "build": "set NODE_ENV=production && npm run clean && webpack -p"
     },
@@ -22,14 +22,18 @@
         "babel-loader": "^7.1.4",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
+        "css-loader": "^0.28.10",
         "directory-tree": "^2.0.0",
         "highlight": "^0.2.4",
         "install": "^0.10.4",
         "loader-utils": "^1.1.0",
         "marked": "^0.3.17",
+        "node-sass": "^4.7.2",
         "npm": "^5.7.1",
         "react-hot-loader": "^4.0.0",
+        "sass-loader": "^6.0.7",
         "schema-utils": "^0.4.5",
+        "style-loader": "^0.20.3",
         "webpack": "^4.1.1",
         "webpack-cli": "^2.0.12",
         "webpack-dev-server": "^3.1.1"
