--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "main": "index.js",
     "keywords": [],
     "scripts": {
-        "start": "webpack-dev-server --open --config ./config/webpack.config.js --mode development",
-        "clean": "rimraf dist",
-        "build": "set NODE_ENV=production && npm run clean && webpack -p"
+        "start": "webpack-dev-server --open --config ./config/webpack.dev.js --mode development",
+        "build": "webpack --config ./config/webpack.prod.js --mode production"
     },
     "babel": {
         "presets": [
@@ -18,18 +17,26 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "autoprefixer": "^8.1.0",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.4",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
         "css-loader": "^0.28.10",
         "directory-tree": "^2.0.0",
+        "file-loader": "^1.1.11",
         "highlight": "^0.2.4",
+        "html-webpack-plugin": "^3.0.6",
         "install": "^0.10.4",
         "loader-utils": "^1.1.0",
         "marked": "^0.3.17",
         "node-sass": "^4.7.2",
         "npm": "^5.7.1",
+        "postcss": "^6.0.19",
+        "postcss-cssnext": "^3.1.0",
+        "postcss-flexbugs-fixes": "^3.3.0",
+        "postcss-import": "^11.1.0",
+        "postcss-loader": "^2.1.1",
         "react-hot-loader": "^4.0.0",
         "sass-loader": "^6.0.7",
         "schema-utils": "^0.4.5",
