--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     },
     "dependencies": {
         "react": "^16.2.0",
-        "react-dom": "^16.2.0"
+        "react-dom": "^16.2.0",
+        "react-router-dom": "^4.2.2"
     }
 }
