--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "sass-loader": "^6.0.7",
         "schema-utils": "^0.4.5",
         "style-loader": "^0.20.3",
+        "url-loader": "^1.0.1",
         "webpack": "^4.1.1",
         "webpack-cli": "^2.0.12",
         "webpack-dev-server": "^3.1.1"
