--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "css-loader": "^0.28.10",
         "directory-tree": "^2.0.0",
         "file-loader": "^1.1.11",
-        "highlight": "^0.2.4",
+        "highlight.js": "^9.12.0",
         "html-webpack-plugin": "^3.0.6",
         "install": "^0.10.4",
         "loader-utils": "^1.1.0",
@@ -38,6 +38,7 @@
         "postcss-import": "^11.1.0",
         "postcss-loader": "^2.1.1",
         "react-hot-loader": "^4.0.0",
+        "remarkable": "^1.7.1",
         "sass-loader": "^6.0.7",
         "schema-utils": "^0.4.5",
         "style-loader": "^0.20.3",
